--- a/package.json
+++ b/package.json
@@ -8,24 +8,21 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "@types/lodash": "^4.14.177",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
     "framer-motion": "^5.3.3",
-    "gsap": "^3.8.0",
+    "keen-slider": "^6.2.1",
     "lodash": "^4.17.21",
+    "mobile-detect": "^1.4.5",
     "prettier": "^2.4.1",
     "react": "^17.0.0",
-    "react-animated-cursor": "^2.2.0",
+    "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.0",
     "react-icons": "^4.3.1",
     "react-parallax-tilt": "^1.5.78",
-    "react-responsive-carousel": "^3.2.22",
-    "react-router-dom": "^6.0.2",
     "styled-components": "^5.3.3",
     "swiper": "^7.3.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.177",
     "@types/react": "^17.0.34",
     "@types/react-dom": "^17.0.11",
     "@types/styled-components": "^5.1.15",
@@ -34,8 +31,10 @@
     "@vitejs/plugin-react": "^1.0.0",
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "^19.0.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.27.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "typescript": "^4.4.4",
