--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "framer-motion": "^5.3.3",
-    "keen-slider": "^6.2.1",
+    "leaflet": "^1.7.1",
     "lodash": "^4.17.21",
     "mobile-detect": "^1.4.5",
     "prettier": "^2.4.1",
@@ -17,27 +17,35 @@
     "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.0",
     "react-icons": "^4.3.1",
+    "react-leaflet": "^3.2.2",
     "react-parallax-tilt": "^1.5.78",
     "styled-components": "^5.3.3",
     "swiper": "^7.3.1"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.7.6",
     "@types/lodash": "^4.14.177",
     "@types/react": "^17.0.34",
     "@types/react-dom": "^17.0.11",
     "@types/styled-components": "^5.1.15",
-    "@typescript-eslint/eslint-plugin": "^5.3.1",
-    "@typescript-eslint/parser": "^5.3.1",
+    "@typescript-eslint/eslint-plugin": "^5.5.0",
+    "@typescript-eslint/parser": "^5.5.0",
     "@vitejs/plugin-react": "^1.0.0",
-    "eslint": "^8.2.0",
-    "eslint-config-airbnb": "^19.0.0",
+    "babel-eslint": "10.0.0",
+    "eslint": "^8.3.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-plugin-flowtype": "^8.0.3",
     "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-jest": "^25.3.0",
+    "eslint-plugin-jest-dom": "^3.9.2",
+    "eslint-plugin-jsx-a11y": "6.3.1",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.27.0",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "typescript": "^4.4.4",
+    "eslint-plugin-react": "7.20.3",
+    "eslint-plugin-react-app": "^6.2.2",
+    "eslint-plugin-react-hooks": "^4.2.1-beta-4729ff6d1-20211202",
+    "eslint-plugin-testing-library": "^5.0.1",
+    "typescript": "^4.5.2",
     "vite": "^2.6.4"
   }
 }
