--- a/package.json
+++ b/package.json
@@ -8,11 +8,10 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@loadable/component": "^5.15.0",
     "framer-motion": "^5.3.3",
     "leaflet": "^1.7.1",
     "lodash": "^4.17.21",
-    "mobile-detect": "^1.4.5",
-    "prettier": "^2.4.1",
     "react": "^17.0.0",
     "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.0",
@@ -24,6 +23,7 @@
   },
   "devDependencies": {
     "@types/leaflet": "^1.7.6",
+    "@types/loadable__component": "^5.13.4",
     "@types/lodash": "^4.14.177",
     "@types/react": "^17.0.34",
     "@types/react-dom": "^17.0.11",
@@ -32,6 +32,7 @@
     "@typescript-eslint/parser": "^5.5.0",
     "@vitejs/plugin-react": "^1.0.0",
     "babel-eslint": "10.0.0",
+    "prettier": "^2.4.1",
     "eslint": "^8.3.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-react-app": "^6.0.0",
