--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "test": "jest"
   },
   "dependencies": {
     "@loadable/component": "^5.15.0",
@@ -22,6 +23,10 @@
     "swiper": "^7.3.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.0",
+    "@testing-library/react": "^12.1.2",
+    "@types/babel__core": "^7.1.16",
+    "@types/jest": "^27.0.3",
     "@types/leaflet": "^1.7.6",
     "@types/loadable__component": "^5.13.4",
     "@types/lodash": "^4.14.177",
@@ -32,7 +37,6 @@
     "@typescript-eslint/parser": "^5.5.0",
     "@vitejs/plugin-react": "^1.0.0",
     "babel-eslint": "10.0.0",
-    "prettier": "^2.4.1",
     "eslint": "^8.3.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-react-app": "^6.0.0",
@@ -46,6 +50,9 @@
     "eslint-plugin-react-app": "^6.2.2",
     "eslint-plugin-react-hooks": "^4.2.1-beta-4729ff6d1-20211202",
     "eslint-plugin-testing-library": "^5.0.1",
+    "prettier": "^2.4.1",
+    "ts-jest": "^27.1.0",
+    "ts-node": "^10.4.0",
     "typescript": "^4.5.2",
     "vite": "^2.6.4"
   }
