--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,5 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": ["./src", "src/typings/styled.d.ts"]
+  "include": ["./src", "src/Typings/styled.d.ts"]
 }
