--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.0",
     "react-icons": "^4.3.1",
+    "react-intersection-observer": "^8.33.1",
     "react-leaflet": "^3.2.2",
     "react-parallax-tilt": "^1.5.78",
     "styled-components": "^5.3.3",
