--- a/package.json
+++ b/package.json
@@ -12,13 +12,12 @@
     "@loadable/component": "^5.15.0",
     "framer-motion": "^5.3.3",
     "leaflet": "^1.7.1",
-    "lodash": "^4.17.21",
     "react": "^17.0.0",
     "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.0",
     "react-icons": "^4.3.1",
-    "react-intersection-observer": "^8.33.1",
     "react-leaflet": "^3.2.2",
+    "react-masonry-css": "^1.0.16",
     "react-parallax-tilt": "^1.5.78",
     "styled-components": "^5.3.3",
     "swiper": "^7.3.1"
@@ -30,7 +29,6 @@
     "@types/jest": "^27.0.3",
     "@types/leaflet": "^1.7.6",
     "@types/loadable__component": "^5.13.4",
-    "@types/lodash": "^4.14.177",
     "@types/react": "^17.0.34",
     "@types/react-dom": "^17.0.11",
     "@types/styled-components": "^5.1.15",
