--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "eslint-plugin-react-app": "^6.2.2",
     "eslint-plugin-react-hooks": "^4.2.1-beta-4729ff6d1-20211202",
     "eslint-plugin-testing-library": "^5.0.1",
+    "jest": "^27.4.5",
     "prettier": "^2.4.1",
     "ts-jest": "^27.1.0",
     "ts-node": "^10.4.0",
