--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-leaflet": "^3.2.2",
     "react-masonry-css": "^1.0.16",
     "react-parallax-tilt": "^1.5.78",
+    "sass": "^1.45.0",
     "styled-components": "^5.3.3",
     "swiper": "^7.3.1"
   },
