--- a/package.json
+++ b/package.json
@@ -21,13 +21,7 @@
     "react-parallax-tilt": "^1.5.78",
     "sass": "^1.45.0",
     "styled-components": "^5.3.3",
-    "swiper": "^7.3.1"
-  },
-  "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.0",
-    "@testing-library/react": "^12.1.2",
-    "@types/babel__core": "^7.1.16",
-    "@types/jest": "^27.0.3",
+    "swiper": "^7.3.1",
     "@types/leaflet": "^1.7.6",
     "@types/loadable__component": "^5.13.4",
     "@types/react": "^17.0.34",
@@ -35,6 +29,14 @@
     "@types/styled-components": "^5.1.15",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "@typescript-eslint/parser": "^5.5.0",
+    "typescript": "^4.5.2"
+
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.0",
+    "@testing-library/react": "^12.1.2",
+    "@types/babel__core": "^7.1.16",
+    "@types/jest": "^27.0.3",
     "@vitejs/plugin-react": "^1.0.0",
     "babel-eslint": "10.0.0",
     "eslint": "^8.3.0",
@@ -54,7 +56,6 @@
     "prettier": "^2.4.1",
     "ts-jest": "^27.1.0",
     "ts-node": "^10.4.0",
-    "typescript": "^4.5.2",
     "vite": "^2.6.4"
   }
 }
