--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@loadable/component": "^5.15.0",
+    "@types/lodash.debounce": "^4.0.6",
     "framer-motion": "^5.3.3",
     "leaflet": "^1.7.1",
+    "lodash.debounce": "^4.0.8",
     "react": "^17.0.0",
     "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.0",
@@ -20,11 +22,7 @@
     "react-masonry-css": "^1.0.16",
     "react-parallax-tilt": "^1.5.78",
     "styled-components": "^5.3.3",
-    "swiper": "^7.3.1"
-  },
-  "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.0",
-    "@testing-library/react": "^12.1.2",
+    "swiper": "^7.3.1",
     "@types/babel__core": "^7.1.16",
     "@types/jest": "^27.0.3",
     "@types/leaflet": "^1.7.6",
@@ -34,6 +32,11 @@
     "@types/styled-components": "^5.1.15",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "@typescript-eslint/parser": "^5.5.0",
+    "typescript": "^4.5.2"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.0",
+    "@testing-library/react": "^12.1.2",
     "@vitejs/plugin-react": "^1.0.0",
     "babel-eslint": "10.0.0",
     "eslint": "^8.3.0",
@@ -53,7 +56,6 @@
     "prettier": "^2.4.1",
     "ts-jest": "^27.1.0",
     "ts-node": "^10.4.0",
-    "typescript": "^4.5.2",
     "vite": "^2.6.4"
   }
 }
