--- a/.eslintrc
+++ b/.eslintrc
@@ -4,11 +4,11 @@
   "plugins": [
     "jsx-a11y",
     "react-hooks",
-    "jest-dom",
-    "testing-library",
     "@typescript-eslint",
-    "prettier",
-    "jest"
+    "unicorn",
+    "functional",
+    "import",
+    "prettier"
   ],
   "settings": {
     "react": {
@@ -17,12 +17,14 @@
   },
   "extends": [
     "eslint:recommended",
+    "plugin:@typescript-eslint/eslint-recommended",
+    "plugin:@typescript-eslint/recommended",
     "plugin:react/recommended",
     "plugin:react-hooks/recommended",
     "plugin:jsx-a11y/strict",
-    "plugin:jest-dom/recommended",
-    "plugin:@typescript-eslint/eslint-recommended",
-    "plugin:@typescript-eslint/recommended",
+    "plugin:functional/stylistic",
+    "plugin:import/recommended",
+    "plugin:import/typescript",
     "prettier"
   ],
   "rules": {
@@ -30,17 +32,13 @@
       "component": true,
       "html": true
     }],
-    "key-spacing": ["error", {"mode": "strict"}],
-    "@typescript-eslint/indent": [ "error", 2 ],
+    "key-spacing": [1, {"mode": "strict"}],
+    "@typescript-eslint/indent": [ 1, 2 ],
     "no-console": 1,
-    "prettier/prettier": 2,
-    "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps": "warn",
-    "jsx-a11y/anchor-is-valid": 0,
-    "@typescript-eslint/no-unused-vars": 0,
+    "react-hooks/rules-of-hooks": 1,
+    "react-hooks/exhaustive-deps": 2,
     "react/react-in-jsx-scope": 0,
-    "react/display-name": 0,
-    "react/prop-types": 0,
+    "@typescript-eslint/no-unused-vars": 0,
     "@typescript-eslint/explicit-member-accessibility": 0,
     "@typescript-eslint/member-delimiter-style": 0,
     "@typescript-eslint/no-var-requires": 0,
@@ -49,14 +47,31 @@
     "@typescript-eslint/no-explicit-any": 0,
     "@typescript-eslint/no-non-null-assertion": 0,
     "no-undef": 0,
-    "no-unused-vars": 0,
+    "no-unused-vars": 1,
     "jsx-a11y/label-has-for": 0,
-    "jsx-a11y/no-noninteractive-tabindex": 0,
-    "react/no-unescaped-entities": 0
+    "react/no-unescaped-entities": 0,
+    "prettier/prettier": 2,
+    "unicorn/import-style": [1, {
+      "styles": {
+        "util": false,
+        "path": {
+          "named": true
+        }
+      }
+    }],
+    "import/no-default-export": 2,
+    "import/no-unassigned-import": 2,
+    "import/order": [
+      "error",
+      {
+        "newlines-between": "always",
+        "alphabetize": { "order": "asc" },
+        "groups": ["builtin", "external", "parent", "sibling", "index", "type"]
+      }
+    ]
   },
   "env": {
     "browser": true,
-    "node": true,
-    "jest/globals": true
+    "node": true
   }
 }
