--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite-ts",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "license": "MIT",
   "scripts": {
     "dev": "vite",
@@ -10,28 +10,26 @@
   },
   "dependencies": {
     "@loadable/component": "^5.15.0",
-    "@types/lodash.debounce": "^4.0.6",
-    "framer-motion": "^5.3.3",
-    "leaflet": "^1.7.1",
-    "lodash.debounce": "^4.0.8",
-    "react": "^17.0.0",
-    "react-device-detect": "^2.1.2",
-    "react-dom": "^17.0.0",
-    "react-icons": "^4.3.1",
-    "react-leaflet": "^3.2.2",
-    "react-masonry-css": "^1.0.16",
-    "react-parallax-tilt": "^1.5.78",
-    "styled-components": "^5.3.3",
-    "swiper": "^7.3.1",
     "@types/babel__core": "^7.1.16",
     "@types/jest": "^27.0.3",
     "@types/leaflet": "^1.7.6",
     "@types/loadable__component": "^5.13.4",
+    "@types/lodash.debounce": "^4.0.6",
     "@types/react": "^17.0.34",
     "@types/react-dom": "^17.0.11",
     "@types/styled-components": "^5.1.15",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "@typescript-eslint/parser": "^5.5.0",
+    "framer-motion": "^5.3.3",
+    "lodash.debounce": "^4.0.8",
+    "react": "^17.0.0",
+    "react-device-detect": "^2.1.2",
+    "react-dom": "^17.0.0",
+    "react-icons": "^4.3.1",
+    "react-masonry-css": "^1.0.16",
+    "react-parallax-tilt": "^1.5.78",
+    "styled-components": "^5.3.3",
+    "swiper": "^7.4.1",
     "typescript": "^4.5.2"
   },
   "devDependencies": {
@@ -43,6 +41,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-flowtype": "^8.0.3",
+    "eslint-plugin-functional": "^4.0.2",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jest": "^25.3.0",
     "eslint-plugin-jest-dom": "^3.9.2",
@@ -52,8 +51,11 @@
     "eslint-plugin-react-app": "^6.2.2",
     "eslint-plugin-react-hooks": "^4.2.1-beta-4729ff6d1-20211202",
     "eslint-plugin-testing-library": "^5.0.1",
+    "eslint-plugin-unicorn": "^40.0.0",
     "jest": "^27.4.5",
     "prettier": "^2.4.1",
+    "rollup-plugin-analyzer": "^4.0.0",
+    "rollup-plugin-visualizer": "^5.5.2",
     "ts-jest": "^27.1.0",
     "ts-node": "^10.4.0",
     "vite": "^2.6.4"
