--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@types/styled-components": "^5.1.15",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "@typescript-eslint/parser": "^5.5.0",
-    "framer-motion": "^5.3.3",
+    "framer-motion": "5.5.5",
     "lodash.debounce": "^4.0.8",
     "react": "^17.0.0",
     "react-device-detect": "^2.1.2",
